# pomarin

./: Cargo.toml  README.md  build.rs  dev.env
res/config/: cfg.ron  materials.ron  materials_example.ron  meshes.ron  meshes_example.ron  model_example.ron  models.ron  textures.ron
src/: main.rs  render_engine.rs
src/app/: config.rs  event.rs  mod.rs  render.rs
src/application/: orbit_camera.rs
src/render/: error.rs  mod.rs  names.rs  state.rs  test.rs
src/render/config/: assets.rs  geometry.rs  handles.rs  material.rs  mesh.rs  mod.rs  model.rs  texture.rs  vertex.rs
src/render/egui/: mod.rs  pass.rs  ui.rs
src/render/scene/: color_material.rs  draw_ext.rs  light.rs  material.rs  mod.rs  model.rs  object.rs  pass.rs  pipeline.rs  store.rs  texture.rs  texture_material.rs  vertex.rs
src/render/shaders/: texture.wgsl
src/settings/: assets.rs  config.rs  mod.rs
src/ui/: camera.rs  egui.rs  error.rs  geometry.rs  instance.rs  light.rs  loader.rs  material.rs  mesh.rs  mod.rs  model.rs  object.rs  objects_pass.rs  pipeline.rs  state.rs  store.rs  texture.rs  vertex.rs
src/ui/config/: assets.rs  geometry.rs  handles.rs  material.rs  mesh.rs  mod.rs  model.rs  texture.rs  vertex.rs
src/ui/render_ui/: pass.rs
src/ui/render_view/: camera.rs  geometry.rs  material.rs  mesh.rs  object.rs  pass.rs  pipeline.rs  store.rs  texture.rs
src/ui/shaders/: color.wgsl  light.wgsl  texture.wgsl
