[package]
name = "pomarin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
image = "0.23"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
winit = "0.26"
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.7", features = [ "derive" ] }
# glam = { version = "0.20", features = [ "debug-glam-assert" ] }
# libm = "0.2"
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
anyhow = "1.0"
# derive-new = "0.5"

# egui
egui_wgpu_backend = "0.16"
egui = "0.16"
epi = "0.16"
egui_winit_platform = "0.13"
